# deep-research

./: .gitignore  ARCHITECTURE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GEMINI.md  README.md  ROADMAP.md  conftest.py  dark_report.html  deep_research.py  pyproject.toml  report.html  todo.md  todo_v1.0.0.md  tui_design.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
.jules/: bolt.md
tests/: test_cli.py  test_deep_research.py  test_export.py  test_integration.py  test_logic.py  test_session.py
tui/: app.py  styles.tcss  widgets.py
