[project]
name = "deepresearch"
version = "0.5.4"
description = "A production-ready CLI for the Gemini Deep Research Agent with streaming, file ingestion, and session management."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.55.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
]

[project.scripts]
deep-research = "deep_research:main"

[tool.uv]
package = true
