[project]
name = "deepresearch"
version = "0.8.2"
description = "A production-ready CLI for the Gemini Deep Research Agent with streaming, file ingestion, and session management."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-genai>=1.55.0",
    "pydantic>=2.12.5",
    "pytest>=9.0.2",
    "python-dotenv>=1.2.1",
    "rich>=14.2.0",
]

[project.scripts]
deep-research = "deep_research:main"

[tool.uv]
package = true

[tool.ruff]
ignore = ["E402"]

[dependency-groups]
dev = [
    "ruff>=0.14.9",
]
